refactor #181 : 자료구조 List 변경